--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
+
+    <a href="https://icy-sand-0e015d203.4.azurestaticapps.net/qr/WI2695_5">WI2695_5</a>
+    <a href="https://icy-sand-0e015d203.4.azurestaticapps.net/qr/123">This is test action</a>
+
   </main>
 </body>
 
