--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,13 @@
     <a href="https://icy-sand-0e015d203.4.azurestaticapps.net/qr/WI2695_5">WI2695_5</a>
     <a href="https://icy-sand-0e015d203.4.azurestaticapps.net/qr/123">This is test action</a>
 
+    <a href="https://stage.majority.com/en">https://stage.majority.com/en</a>
+    <a href="https://stage.majority.com/en/majority-account">https://stage.majority.com/en/majority-account</a>
+
+    <a href="majority://callback">majority://callback</a>
+    
+
+    
   </main>
 </body>
 
