--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <a href="majority://callback">majority://callback</a>
     
 
+    <img src="mysim.png" width="300">
     
   </main>
 </body>
