add more action

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,12 @@
     
 
     <img src="mysim.png" width="300">
-    
+
+    <div>
+      This is a valid link <br>
+      <a href="https://esimsetup.apple.com/esim_qrcode_provisioning?carddata=LPA:1$smdpplus.ripsim.com$MH4DW3KQS8RBQIWKGWHAHDDD">Tap me to install</a>
+    </div>
+
   </main>
 </body>
 
