--- a/src/next_page_1.html
+++ b/src/next_page_1.html
@@ -20,6 +20,10 @@
         <li><a href="https://stage.majority.com/en/majority-account">https://stage.majority.com/en/majority-account</a></li>
         <li><a href="majority://callback">majority://callback</a></li>
         <li><a href="majority://phoneplan/account">majority://phoneplan/account</a></li>
+
+
+        <li><a href="https://dev.charge.naeva.app/qr/91975b4b-d1fc-4b30-9504-7b550b1e092a">qr/91975b4b-d1fc-4b30-9504-7b550b1e092a</a></li>
+        <li><a href="https://dev.charge.naeva.app/qr/launch/91975b4b">qr/launch/91975b4b</a></li>
       </ul>
     </div>
     
