--- a/src/next_page_1.html
+++ b/src/next_page_1.html
@@ -24,6 +24,9 @@
 
         <li><a href="https://dev.charge.naeva.app/qr/91975b4b-d1fc-4b30-9504-7b550b1e092a">qr/91975b4b-d1fc-4b30-9504-7b550b1e092a</a></li>
         <li><a href="https://dev.charge.naeva.app/qr/launch/91975b4b">qr/launch/91975b4b</a></li>
+
+        <li><a href="/qr/launch/91975b4b">indirect qr/launch/91975b4b</a></li>
+        
       </ul>
     </div>
     
