--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,19 @@
         <li><a href="majority://callback">majority://callback</a></li>
         <li><a href="majority://phoneplan/account">majority://phoneplan/account</a></li>
         <li><a href="majority://send/international">majority://send/international</a></li>
-        <li><a href="majority://send/mtu">majority://send/mtu</a></li>
         <li><a href="majority://send/international/CO/COP">majority://send/international/CO/COP</a></li>
-        <li><a href="majority://send/mtu/CO">majority://send/mtu/CO</a></li>
-        <li><a href="majority://send/mtu/direct">majority://send/mtu/direct</a></li>
-        <li><a href="majority://send/mtu/direct/CO">majority://send/mtu/direct/CO</a></li>
         <li><a href="majority://send/international/direct/CO/COP">majority://send/international/direct/CO/COP</a></li>
         <li><a href="majority://send/international/direct/CO/USD">majority://send/international/direct/CO/USD</a></li>
         <li><a href="majority://send/international/CO/USD">majority://send/international/CO/USD</a></li>
-
+        <li><a href="majority://send/international/VE/VES">majority://send/international/CO/COP</a></li>
+        <li><a href="majority://send/international/direct/VE/VES">majority://send/international/direct/CO/COP</a></li>
+        <li><a href="majority://send/mtu">majority://send/mtu</a></li>
+        <li><a href="majority://send/mtu/CO">majority://send/mtu/CO</a></li>
+        <li><a href="majority://send/mtu/direct">majority://send/mtu/direct</a></li>
+        <li><a href="majority://send/mtu/direct/CO">majority://send/mtu/direct/CO</a></li>
+        <li><a href="majority://send/mtu/VE">majority://send/mtu/CO</a></li>
+        <li><a href="majority://send/mtu/direct/VE">majority://send/mtu/direct/CO</a></li>
+        
       </ul>
     </div>
     
